# Chess-Arena-for-Python

./: .gitignore  .player1  .player2  Makefile  README.md  example_use_logged_data.py  pyproject.toml
.claude/: CLAUDE.md
chess_arena/: __main__.py  board.py  connection_manager.py  game_session.py  persistence.py  queue.py  renderer.py  server.py
demos/: BUILD_YOUR_OWN.md  README.md  chess_client.py  pyproject.toml  strategy.py  strategy_example_random.py
tests/: __init__.py  test_board.py  test_chess_client.py  test_connection_manager.py  test_game_session.py  test_persistence.py  test_queue.py  test_server.py  test_strategy.py  test_strategy_base.py  test_strategy_example_random.py
